--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,5 @@ workflows:
           create-repo: true
           dockerfile: Dockerfile
           path: .
-          repo: circleci-ecr-demo
+          repo: goodunited-supporter-service
           tag: "$CIRCLE_SHA1"
