--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ workflows:
     jobs:
       - aws-ecr/build-and-push-image:
           <<: *filters
+          resource_class: medium
           name: Build and Push Docker Image
           account-url: AWS_ECR_ACCOUNT_URL
           aws-access-key-id: AWS_ACCESS_KEY_ID
