--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,24 +7,24 @@ anchors:
         only: main
 
 orbs:
-  aws-ecr: circleci/aws-ecr@9.0.1
+  aws-ecr: circleci/aws-ecr@6.15.2
 
 workflows:
   build_and_push_image:
     jobs:
       - aws-ecr/build-and-push-image:
-        name: Build and Push Docker Image
-        account-url: AWS_ECR_ACCOUNT_URL
-        aws-access-key-id: AWS_ACCESS_KEY_ID
-        aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-        region: AWS_DEFAULT_REGION
-        context: dev
-        platform: linux/amd64
-        create-repo: false
-        dockerfile: Dockerfile
-        no-output-timeout: 20m
-        path: .
-        profile-name: default
-        repo: goodunited-supporter-service
-        skip-when-tags-exist: false
-        tag: 'latest,$CIRCLE_SHA1'
+          <<: *filters
+          name: Build and Push Docker Image
+          account-url: AWS_ECR_ACCOUNT_URL
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          region: AWS_DEFAULT_REGION
+          context: dev
+          create-repo: true
+          dockerfile: Dockerfile
+          no-output-timeout: 20m
+          path: .
+          profile-name: default
+          repo: wordpress
+          skip-when-tags-exist: false
+          tag: 'latest,$CIRCLE_SHA1'
