--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,9 @@ jobs:
       - setup_remote_docker:
           version: 20.10.11
       - aws-ecr/build-and-push-image:
-          dockerfile: Dockerfile
+          path: ./services/supporter-service/Dockerfile
           repo: goodunited-supporter-service
-          tag: latest,$CIRCLE_SHA1
+          tag: $CIRCLE_SHA1
   mes-ecr:
     docker:
       - image: cimg/base:stable
@@ -21,9 +21,9 @@ jobs:
       - setup_remote_docker:
           version: 20.10.11
       - aws-ecr/build-and-push-image:
-          dockerfile: Dockerfile
+          path: ./services/supporter-service/Dockerfile
           repo: goodunited-messaging-service
-          tag: latest,$CIRCLE_SHA1        
+          tag: $CIRCLE_SHA1        
 
 workflows:
   build-and-push-to-ecr:
