--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ workflows:
       - aws-ecr:
           context:
             - dev
+            - poc
           filters:
             branches:
               only:
@@ -38,6 +39,7 @@ workflows:
       - mes-ecr:
           context:
             - dev
+            - poc
           filters:
             branches:
               only:
