--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - aws-ecr/build-and-push-image:
           path: ./services/supporter-service/
           repo: goodunited-supporter-service
-          tag: $(date +%Y%m%d%H%M%S)
+          tag: $CIRCLE_SHA1
   # mes-ecr:
   #   docker:
   #     - image: cimg/base:stable
