--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ version: 2.1
 orbs:
   aws-ecr: circleci/aws-ecr@7.3.0
   aws-ecs: circleci/aws-ecs@4.0.0
-  slack: circleci/slack@4.1
 jobs:
   aws-ecr:
     docker:
@@ -15,13 +14,11 @@ jobs:
           path: ./services/supporter-service/
           repo: goodunited-supporter-service
           tag: $CIRCLE_SHA1
-      - slack/notify:
-          event: fail
-          mentions: '@antriksha.somani'
-          template: basic_fail_1
-      - slack/notify:
-          event: pass
-          template: success_tagged_deploy_1
+      - run:
+          name: Store Image Tag in SSM Parameter
+          command: |
+            # Use AWS CLI to update SSM parameter with the new image tag
+            aws ssm put-parameter --name "/image-tag/latest" --value "${CIRCLE_SHA1}" --type "String" --overwrite
   # mes-ecr:
   #   docker:
   #     - image: cimg/base:stable
@@ -39,13 +36,6 @@ workflows:
       - aws-ecr:
           context:
             - dev
-          filters:
-            branches:
-              only:
-                - main
-      - aws-ecr:
-          context:
-            - poc
           filters:
             branches:
               only:
