--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ workflows:
   build-and-push-to-ecr:
     jobs:
       - aws-ecr:
-          name: aws-ecr $CIRCLE_BRANCH
+          name: aws-ecr-dev
           context:
             - dev
           filters:
