--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,34 +35,6 @@ commands:
                   }
                 ]
             }
-
-      - slack/notify:
-          event: fail
-          custom: |
-            {
-              "blocks":
-                [
-                  {
-                    "type": "header",
-                    "text":
-                      {
-                        "type": "plain_text",
-                        "text": ":fire: Deployment to ${CIRCLE_BRANCH} Failed",
-                        "emoji": true
-                      }
-                  },
-                  {
-                    "type": "section",
-                    "fields":
-                      [
-                        {
-                          "type": "mrkdwn",
-                          "text": "Failed to deploy ${CIRCLE_PULL_REQUESTS}."
-                        }
-                      ]
-                  }
-                ]
-            }  
 jobs:
   aws-ecr:
     docker:
@@ -79,7 +51,11 @@ jobs:
           command: |
             # Use AWS CLI to update SSM parameter with the new image tag
             aws ssm put-parameter --name "/image-tag/latest" --value "${CIRCLE_SHA1}" --type "String" --overwrite
-      - notify_slack      
+      - notify_slack   
+      - slack/notify:
+          event: fail
+          mentions: '@antriksha.somani'
+          template: basic_fail_1
   # mes-ecr:
   #   docker:
   #     - image: cimg/base:stable
