--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,16 +29,16 @@ jobs:
           command: |
             # Use AWS CLI to update SSM parameter with the new image tag
             aws ssm put-parameter --name "/image-tag/latest" --value "${CIRCLE_SHA1}" --type "String" --overwrite
-  # mes-ecr:
-  #   docker:
-  #     - image: cimg/base:stable
-  #   steps:
-  #     - setup_remote_docker:
-  #         version: 20.10.11
-  #     - aws-ecr/build-and-push-image:
-  #         path: ./services/messaging-service/
-  #         repo: goodunited-messaging-service
-  #         tag: $CIRCLE_SHA1        
+  mes-ecr:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - setup_remote_docker:
+          version: 20.10.11
+      - aws-ecr/build-and-push-image:
+          path: ./services/messaging-service/
+          repo: goodunited-messaging-service
+          tag: $CIRCLE_SHA1        
 
 workflows:
   build-and-push-to-ecr:
@@ -50,16 +50,15 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - dev
       - hold:
          type: approval
          requires:
            - "aws-ecr-dev"          
-      # - mes-ecr:
-      #     context:
-      #       - dev
-      #       - poc
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main          
+      - mes-ecr:
+          context:
+            - dev
+          filters:
+            branches:
+              only:
+                - main          
