--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,15 +3,6 @@ version: 2.1
 orbs:
   aws-ecr: circleci/aws-ecr@7.3.0
   aws-ecs: circleci/aws-ecs@4.0.0
-  slack: circleci/slack@4.12.6
-
-commands:
-  notify_slack:
-    steps:
-      - slack/notify:
-          event: pass
-          mentions: '@here'
-          template: basic_success_1
              
 jobs:
   aws-ecr:
@@ -29,7 +20,7 @@ jobs:
           command: |
             # Use AWS CLI to update SSM parameter with the new image tag
             aws ssm put-parameter --name "/image-tag/latest" --value "${CIRCLE_SHA1}" --type "String" --overwrite
-  mes-ecr:
+  mes-prod-ecr-build:
     docker:
       - image: cimg/base:stable
     steps:
@@ -38,8 +29,18 @@ jobs:
       - aws-ecr/build-and-push-image:
           path: ./services/messaging-service/
           repo: goodunited-messaging-service
-          tag: $CIRCLE_SHA1        
-
+          tag: $CIRCLE_SHA1     
+  mes-prod-ecs-deploy:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - setup_remote_docker:
+          version: 20.10.11
+      - run:
+          name: Store Image Tag in SSM Parameter
+          command: |
+            # Use AWS CLI to update SSM parameter with the new image tag
+            aws ssm put-parameter --name "/image-tag/latest" --value "${CIRCLE_SHA1}" --type "String" --overwrite           
 workflows:
   build-and-push-to-ecr:
     jobs:
@@ -50,15 +51,22 @@ workflows:
           filters:
             branches:
               only:
-                - dev
-      - hold:
-         type: approval
-         requires:
-           - "aws-ecr-dev"          
-      - mes-ecr:
+                - dev         
+      - mes-prod-ecr-build:
           context:
             - dev
           filters:
             branches:
               only:
-                - main          
+                - main  
+      - hold:
+         type: approval
+         requires:
+           - "mes-prod-ecr-build" 
+      - mes-prod-ecs-deploy:
+          context:
+            - dev
+          filters:
+            branches:
+              only:
+                - main                       
