--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,8 @@ workflows:
               only:
                 - main         
       - mes-ecr:
+          requires:
+            - hold
           context:
             - dev
           filters:
