--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           name: Wait for Approval
           command: |
             # Add Slack notification logic to inform users about the pending approval
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"A deployment to stage is pending approval. Please approve the deployment. @mayank.sharma "}' $SLACK_WEBHOOK_URL
+            curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"A deployment to stage is pending approval. Please approve the deployment, @mayank.sharma.\"}" $SLACK_WEBHOOK_URL
             # Replace $SLACK_WEBHOOK_URL with your actual Slack webhook URL
   aws-ecr:
     docker:
